Fix: fixed navbar not showing when not logged in, fixed navbar css and fixed navbar buttons showing wrong buttons.

--- a/src/web/wwwroot/assets/css/registerPage.css
+++ b/src/web/wwwroot/assets/css/registerPage.css
@@ -1,3 +1,17 @@
+@font-face {
+    font-family: 'Pacifico';
+    src: url('../../public/assets/fonts/Pacifico.ttf');
+    font-weight: normal;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'RaleWay';
+    src: url('../../public/assets/fonts/Raleway-Regular.ttf');
+    font-weight: normal;
+    font-style: normal;
+  }
+
 body {
     background-image: linear-gradient(to right, #1C2594, #7883CE, #1C2594);
     background-repeat: no-repeat;
